--- a/inventory/templates/inventory/inventory_base_new.html
+++ b/inventory/templates/inventory/inventory_base_new.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/inventory-dashboard-new.css' %}">
+<link rel="stylesheet" href="{% static 'css/inventory-dashboard.css' %}">
 <link rel="stylesheet" href="{% static 'css/mobile.css' %}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 {% endblock %}
@@ -119,6 +119,6 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="{% static 'js/inventory-dashboard-new.js' %}"></script>
+<script src="{% static 'js/inventory-dashboard.js' %}"></script>
 <script src="{% static 'js/drag-drop.js' %}"></script>
 {% endblock %}
