--- a/inventory/templates/inventory/inventory_blocks.html
+++ b/inventory/templates/inventory/inventory_blocks.html
@@ -3,7 +3,7 @@
 {# التعريفات المشتركة لقوالب المخزون #}
 
 {% block inventory_extra_css %}
-<link rel="stylesheet" href="{% static 'css/inventory-dashboard-new.css' %}">
+<link rel="stylesheet" href="{% static 'css/inventory-dashboard.css' %}">
 <link rel="stylesheet" href="{% static 'css/mobile.css' %}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 {% endblock %}
@@ -48,5 +48,5 @@
 {% endblock %}
 
 {% block inventory_extra_js %}
-<script src="{% static 'js/inventory-dashboard-new.js' %}"></script>
+<script src="{% static 'js/inventory-dashboard.js' %}"></script>
 {% endblock %}
