--- a/inventory/templates/inventory/product_list_new.html
+++ b/inventory/templates/inventory/product_list_new.html
@@ -65,9 +65,32 @@
                     {% endif %}
                 </h4>
                 <div class="data-table-actions">
-                    <a href="{% url 'inventory:product_create' %}" class="btn btn-success">
-                        <i class="fas fa-plus"></i> إضافة منتج
-                    </a>
+                    <div class="btn-group" role="group">
+                        <a href="{% url 'inventory:product_create' %}" class="btn btn-success">
+                            <i class="fas fa-plus"></i> إضافة منتج
+                        </a>
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-upload"></i> رفع بالجملة
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="{% url 'inventory:product_bulk_upload' %}">
+                                    <i class="fas fa-plus-circle text-success"></i> إضافة منتجات جديدة
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'inventory:bulk_stock_update' %}">
+                                    <i class="fas fa-sync-alt text-warning"></i> تحديث كميات المخزون
+                                </a>
+                            </li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'inventory:download_excel_template' %}">
+                                    <i class="fas fa-download text-info"></i> تحميل قالب إكسل
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="data-table-body">
